# iot-device

./: .clang-format  CMakeLists.txt  DESIGN.md  README.md
include/: humidity_sensor.h  logger.h  power.h  ring_buffer.h  sensor.h  temperature_sensor.h  uploader.h
src/: humidity_sensor.cpp  logger.cpp  main.cpp  power.cpp  ring_buffer.cpp  sensor.cpp  temperature_sensor.cpp  uploader.cpp
